where to get fonts

--- a/config.org
+++ b/config.org
@@ -86,6 +86,8 @@ M-x all-the-icons-install-fonts needs to be run...
 #+end_src
 
 * FONTS
+  'SauceCodeProd Nerd Font 11' and 'Ubuntu Nerd Font 11' 
+  can be found/downloaded from www.nerdfonts.com
 #+begin_src emacs-lisp
 (set-face-attribute 'default nil
 :font "SauceCodePro Nerd Font 11"
